--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.settings"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
         <property name="java-output-path" value="/crudapp/target/classes"/>
         <property name="context-root" value="crudappp"/>
     </wb-module>
